# SynthEd

./: .gitignore  CMakeLists.txt  README.md
doc/: TODO.txt
src/: instrument.h  main.cpp  main_test.h  notes.cpp  notes.h  playback.cpp  playback.h  test.c  test_editor.cpp  test_piano.cpp
